Update and rename .env.sample to .env

--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 # Don't use quotes( " and ' )
 
-APP_ID=
-API_HASH=
-BOT_TOKEN=
-OWNER=
+APP_ID=7324525
+API_HASH=d28604398dc13af15dd108bb34a27a54
+BOT_TOKEN=7461358634:AAHqk9o56O33T6uy8h4rWFFs_GmNwlhzZXc
+OWNER=6169288210
 
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
 
-#FFMPEG=
+FFMPEG=ffmpeg -i """{}""" -metadata:s:v:0 title="[A-L] : (This Episode)" -metadata:s:a:0 title="[Telegram: @X_XF8]" -metadata:s:a:1 title="[Telegram: @X_XF8]" -map 0:v? -map 0:a? -map 0:s? -map 0:t? -metadata title="Fileinfo | HarukiOwO" -c:v libx265 -pix_fmt yuv420p10le -preset slow -s 1280x720 -crf 24 -c:a libopus -ac 2 -vbr 2  -ab 128k -c:s copy -movflags +faststart """{}""" -y
 #TEMP_USERS
 #THUMBNAIL=
 #CACHE_DL=
