--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ OWNER=6169288210
 # [OPTIONAL]
 # Uncomment (remove the '#') the below variables before adding their values
 
-FFMPEG=ffmpeg -i """{}""" -metadata:s:v:0 title="[A-L] : (This Episode)" -metadata:s:a:0 title="[Telegram: @X_XF8]" -metadata:s:a:1 title="[Telegram: @X_XF8]" -map 0:v? -map 0:a? -map 0:s? -map 0:t? -metadata title="Fileinfo | HarukiOwO" -c:v libx265 -pix_fmt yuv420p10le -preset slow -s 1280x720 -crf 24 -c:a libopus -ac 2 -vbr 2  -ab 128k -c:s copy -movflags +faststart """{}""" -y
+#FFMPEG=ffmpeg -i """{}""" -metadata:s:v:0 title="[A-L] : (This Episode)" -metadata:s:a:0 title="[Telegram: @X_XF8]" -metadata:s:a:1 title="[Telegram: @X_XF8]" -map 0:v? -map 0:a? -map 0:s? -map 0:t? -metadata title="Fileinfo | HarukiOwO" -c:v libx265 -pix_fmt yuv420p10le -preset slow -s 1280x720 -crf 24 -c:a libopus -ac 2 -vbr 2  -ab 128k -c:s copy -movflags +faststart """{}""" -y
 #TEMP_USERS
 #THUMBNAIL=
 #CACHE_DL=
